<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    app:cardCornerRadius="10dp"
    android:layout_margin="6dp"
    android:elevation="10dp">
    <RelativeLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/photo"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/textColor"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/heart"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@+id/score"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/like"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/up"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@+id/score"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="8dp"
            android:layout_toRightOf="@+id/heart"
            android:contentDescription="@string/up"
            android:scaleType="fitCenter"
            android:layout_toEndOf="@+id/heart" />

        <ImageView
            android:id="@+id/down"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@+id/score"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toRightOf="@+id/heart"
            android:contentDescription="@string/up"
            android:scaleType="fitCenter"
            android:layout_toEndOf="@+id/up" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>